--- a/overlay/packages/apps/Snap/res/values/config.xml
+++ b/overlay/packages/apps/Snap/res/values/config.xml
@@ -26,4 +26,22 @@
 
     <!-- Enable support for image stabilization -->
     <bool name="support_dis">false</bool>
+
+    <!-- Don't force camera api v1 -->
+    <bool name="front_camera_open_legacy">false</bool>
+    <bool name="back_camera_open_legacy">false</bool>
+
+    <!-- Restart preview for back camera onPictureTaken -->
+    <bool name="back_camera_restart_preview_onPictureTaken">true</bool>
+
+    <!-- Restart preview for front camera onPictureTaken -->
+    <bool name="front_camera_restart_preview_onPictureTaken">true</bool>
+
+    <!-- Use following iso parameter.-->
+    <string name="key_iso">sony-iso</string>
+    <string name="key_iso_values">sony-iso-values</string>
+
+    <!-- ISO values use numbers.
+         Example: 50 instead of ISO50 -->
+    <bool name="iso_values_use_numbers">true</bool>
 </resources>
